# stable-diffusion.cpp

./: README.md  server.py
android_app/: settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_app/app/src/main/java/com/example/stablediffusion/: MainActivity.java
android_app/app/src/main/res/layout/: activity_main.xml
android_app/app/src/main/res/values/: arrays.xml  strings.xml
web/: index.html
web/static/: script.js  style.css
